Fix authors wrapping on mobile

--- a/frontend/static/frontend/css/app.css
+++ b/frontend/static/frontend/css/app.css
@@ -134,4 +134,10 @@ button:focus {
 		margin-top: 0;
 		border-radius: 0;
 	}
+	.authors {
+		flex-direction: column;
+	}
+	.authors div {
+		margin: 2.5px 0;
+	}
 }
